--- a/Internet_Banking_Application/src/main/resources/application.properties
+++ b/Internet_Banking_Application/src/main/resources/application.properties
@@ -1,1 +1,22 @@
+server.port=9000
+
+
+#DB configuration
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/ibabankinggit
+spring.datasource.username=root
+spring.datasource.password=root
+
+# Hibernate configuration
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+
+
+
+
+
+
 
